--- a/translations/messages.ar.yaml
+++ b/translations/messages.ar.yaml
@@ -444,20 +444,20 @@ price: "السعر:"
 year: "السنة:"
 
 categories:
-  jet_aircraft: "الطائرات النفاثة"
-  turboprop_aircraft: "الطائرات التوربينية"
-  piston_single_aircraft: "الطائرات ذات المحرك الواحد"
-  piston_twin_aircraft: "الطائرات ذات المحركين"
-  light_sport: "الطائرات الرياضية الخفيفة"
-  experimental_homebuilt_aircraft: "الطائرات التجريبية"
-  piston_agricultural_aircraft: "الطائرات الزراعية ذات المحرك"
-  piston_amphibious_flatplanes: "الطائرات المائية ذات المحرك"
-  piston_helicopters: "المروحيات ذات المحرك"
-  piston_military_aircraft: "الطائرات العسكرية ذات المحرك"
-  turbine_agricultural_aircraft: "الطائرات الزراعية التوربينية"
-  turbine_helicopters: "المروحيات التوربينية"
-  turbine_military_aircraft: "الطائرات العسكرية التوربينية"
-  turbine_amphibious_floatplane: "الطائرات المائية التوربينية"
+  jet_aircraft: "Jet aircraft"
+  turboprop_aircraft: "Turboprop aircraft"
+  piston_single_aircraft: "Single-engine piston aircraft"
+  piston_twin_aircraft: "Twin-engine piston aircraft"
+  light_sport: "Light sport aircraft"
+  experimental_homebuilt_aircraft: "Experimental aircraft"
+  piston_agricultural_aircraft: "Piston agricultural aircraft"
+  piston_amphibious_flatplanes: "Piston floatplanes"
+  piston_helicopters: "Piston helicopters"
+  piston_military_aircraft: "Piston military aircraft"
+  turbine_agricultural_aircraft: "Turbine agricultural aircraft"
+  turbine_helicopters: "Turbine helicopters"
+  turbine_military_aircraft: "Turbine military aircraft"
+  turbine_amphibious_floatplane: "Turbine floatplanes"
 
 footer:
   description: "رحلتك القادمة تبدأ هنا. بين الشغف والتميز، ابحث عن الطائرة التي ستأخذك إلى آفاق جديدة. السماء تنتظرك."
