--- a/translations/messages.de.yaml
+++ b/translations/messages.de.yaml
@@ -444,20 +444,20 @@ price: "Preis:"
 year: "Jahr:"
 
 categories:
-  jet_aircraft: "Jet-Flugzeuge"
-  turboprop_aircraft: "Turboprop-Flugzeuge"
-  piston_single_aircraft: "Einmotorige Kolbenflugzeuge"
-  piston_twin_aircraft: "Zweimotorige Kolbenflugzeuge"
-  light_sport: "Leichte Sportflugzeuge"
-  experimental_homebuilt_aircraft: "Experimentelle Flugzeuge"
-  piston_agricultural_aircraft: "Kolben-Landwirtschaftsflugzeuge"
-  piston_amphibious_flatplanes: "Kolben-Schwimmerflugzeuge"
-  piston_helicopters: "Kolben-Hubschrauber"
-  piston_military_aircraft: "Kolben-Militärflugzeuge"
-  turbine_agricultural_aircraft: "Turbinen-Landwirtschaftsflugzeuge"
-  turbine_helicopters: "Turbinen-Hubschrauber"
-  turbine_military_aircraft: "Turbinen-Militärflugzeuge"
-  turbine_amphibious_floatplane: "Turbinen-Schwimmerflugzeuge"
+  jet_aircraft: "Jet aircraft"
+  turboprop_aircraft: "Turboprop aircraft"
+  piston_single_aircraft: "Single-engine piston aircraft"
+  piston_twin_aircraft: "Twin-engine piston aircraft"
+  light_sport: "Light sport aircraft"
+  experimental_homebuilt_aircraft: "Experimental aircraft"
+  piston_agricultural_aircraft: "Piston agricultural aircraft"
+  piston_amphibious_flatplanes: "Piston floatplanes"
+  piston_helicopters: "Piston helicopters"
+  piston_military_aircraft: "Piston military aircraft"
+  turbine_agricultural_aircraft: "Turbine agricultural aircraft"
+  turbine_helicopters: "Turbine helicopters"
+  turbine_military_aircraft: "Turbine military aircraft"
+  turbine_amphibious_floatplane: "Turbine floatplanes"
 
 footer:
   description: "Ihr nächster Abflug beginnt hier. Zwischen Leidenschaft und Exzellenz finden Sie das Flugzeug, das Sie zu neuen Horizonten bringt. Der Himmel wartet auf Sie."
