--- a/translations/messages.ru.yaml
+++ b/translations/messages.ru.yaml
@@ -444,20 +444,20 @@ price: "Цена:"
 year: "Год:"
 
 categories:
-  jet_aircraft: "Реактивные самолёты"
-  turboprop_aircraft: "Турбовинтовые самолёты"
-  piston_single_aircraft: "Однодвигательные поршневые самолёты"
-  piston_twin_aircraft: "Двухдвигательные поршневые самолёты"
-  light_sport: "Лёгкие спортивные самолёты"
-  experimental_homebuilt_aircraft: "Экспериментальные самолёты"
-  piston_agricultural_aircraft: "Поршневые сельскохозяйственные самолёты"
-  piston_amphibious_flatplanes: "Поршневые гидросамолёты"
-  piston_helicopters: "Поршневые вертолёты"
-  piston_military_aircraft: "Поршневые военные самолёты"
-  turbine_agricultural_aircraft: "Турбинные сельскохозяйственные самолёты"
-  turbine_helicopters: "Турбинные вертолёты"
-  turbine_military_aircraft: "Турбинные военные самолёты"
-  turbine_amphibious_floatplane: "Турбинные гидросамолёты"
+  jet_aircraft: "Jet aircraft"
+  turboprop_aircraft: "Turboprop aircraft"
+  piston_single_aircraft: "Single-engine piston aircraft"
+  piston_twin_aircraft: "Twin-engine piston aircraft"
+  light_sport: "Light sport aircraft"
+  experimental_homebuilt_aircraft: "Experimental aircraft"
+  piston_agricultural_aircraft: "Piston agricultural aircraft"
+  piston_amphibious_flatplanes: "Piston floatplanes"
+  piston_helicopters: "Piston helicopters"
+  piston_military_aircraft: "Piston military aircraft"
+  turbine_agricultural_aircraft: "Turbine agricultural aircraft"
+  turbine_helicopters: "Turbine helicopters"
+  turbine_military_aircraft: "Turbine military aircraft"
+  turbine_amphibious_floatplane: "Turbine floatplanes"
 
 footer:
   description: "Ваш следующий вылет начинается здесь. Между страстью и совершенством найдите самолёт, который приведёт вас к новым горизонтам. Небо ждёт вас."
